--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Final Project</title>
+   <title>Ruby Man|Portfolio</title>
    <link rel="stylesheet" href="css/portfolio.css">
 </head>
 <body>
