--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Final Project</title>
+   <title>Ruby Man|About</title>
    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
