--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Final Project</title>
+   <title>Ruby Man|Contact</title>
    <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
