--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <title>Ruby Man</title>
    <link rel="stylesheet" href="css/style.css">
+   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
    <header>
