--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <title>Ruby Man</title>
    <link rel="stylesheet" href="css/style.css">
-   <link rel="icon" href="/img/favicon.jpg/favicon.jpg">
+   <link rel="icon" href="/img/favicon.ico/">
 </head>
 <body>
    <header>
