--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Ruby Man</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Ruby Man</title>
    <link rel="stylesheet" href="css/style.css">
    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
 </head>
@@ -11,9 +11,7 @@
    <header>
       <div id="container">
          <img style="display: inline;" src="img/name.png" alt="logo" class="imglogo">
-         <img src="img/hero.jpg" alt="hero" class="hero">
-         <h1> Ruby Man </h1>
-         <p> From Hong Kong, residing in United States. </p>
+         <img src="img/hero.png" alt="hero" class="hero">
       </div>
    </header>
    <nav>
@@ -33,10 +31,17 @@
       </ul>
    </nav>
    <main>
+      <h1> Ruby Man </h1>
+      <p> From Hong Kong, residing in United States. </p>
       <div class="box1">
          <button class="About" onclick='location.href="about.html"'>About</button>
          <button class="Porfolio" onclick='location.href="portfolio.html"'>Portfolio</button>
          <button class="Contact" onclick='location.href="contact.html"'>Contact</button>
+      </div>
+      <div class="icons">
+         <img src="img/about.png" alt="aboutme" class="aboutme">
+         <img src="img/portfolio.png" alt="portfolio" class="portfolioicon">
+         <img src="img/contact.png" alt="contactme" class="contactme">
       </div>
    </main>
    <footer>
