--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header>
       <div id="container">
          <img style="display: inline;" src="img/name.png" alt="logo" class="imglogo">
-         <img src="img/hero.png" alt="hero" class="hero">
+         <img src="img/hero.jpg" alt="hero" class="hero">
       </div>
    </header>
    <nav>
